2013-12-17 Roman
- SYS: Autoconf templates AX_MOD_*_EN changed to syntax: AX_MOD_*_EN([ModName],[Help],[En],[InclAllow],[ActionCheck],[ActionEnable])
- !!:DAQ.OPC_UA: All library's files moved to separated folder libOPC_UA. The library libOPC_UA simple test program is added.
    The library libOPC_UA namespace is changed from OSCADA_OPC to OPC.
    From function messIO() two last arguments are removed.
- !!:Special.FLibSYS: Some code clear. Object's IO and GD first implemention is added.
- Transport.Sockets: Some code clear.


2013-12-12 Roman
- Transport.{,Sockets}: Resource is added to input transport, for writeTo().
- !:DAQ.OPC_UA: RePublish service and retransmission queue processing is added. Maximum notes per publish processing is added.
- UI.VCAEngine: Session widget's user API function mime() and mimeSet() is added for allow access to mime data,
    processing the data and change by set to the session context table.
    Too usefull for dynamic forming some images like SVG (simple process XML) or PNG,JPEG,GIF by LibGD2 API (will append further).


2013-12-11 Roman
- DAQ.OPC_UA: Auth methods UserName and X509Identity processing is added, but not check yet for real users into OpenSCADA.
    Secure channel's TokenId renew support into input part is implemented and some fixed into output part.
- FIX:UI.WebVision: Primitive "Diagram" cursor scale is fixed.
    Oppress scroll for include page size equal to the continer.
    NaN value display prevented by check argument's result of the primitive "Text".
- UI.WebVision: Font's size obtain by getFont() is added and used for "FormEl" elements height tune.


2013-12-09 Roman
- UI.QTCfg: Copy a node into the branch and no select direct the parent node, by copy to self, is improved and fixed.
- DAQ.OPC_UA: Synchronous input requests processing support return and disabled, enabled for LTS.