@@ -1,3 +1,5 @@
+EXTRA_DIST = *.h test_Makefile test.cpp *.pem
+
 noinst_LTLIBRARIES = libOPC_UA.la
 libOPC_UA_la_SOURCES = libOPC_UA.cpp
 libOPC_UA_la_CXXFLAGS = -fpic
